css/recettes.css
/* ... */
/* desactiver le zoom de la page sur mobile lorsqu'on clic sur un input */
html {
    touch-action: manipulation;
}



.bouton-reset__portion {
    cursor: pointer;
    display: flex;
    justify-content: center;
    padding-top: 12px;
    transition: transform 0.2s ease;
}
.bouton-reset__portion svg{
    fill:rgb(63, 55, 53);
}
.bouton-reset__portion:hover {
    transform: scale(1.2); /* Agrandissement lors du survol */
}
.bouton-reset__portion:hover svg{
    fill:#CB6863;
}





/* Champ d'entrée */
#portion-input {
    background-color: transparent;
    font-weight: bold;
    font-size: 15px;
    color: #CB6863;
}

/* Unité de portion */
.portion-control__unit {
    font-weight: 700; 
    font-size: 1em;
    font-family: 'Caviar Dreams', sans-serif; 
    color: #CB6863;
    padding-left: 8px;
}








.recette_ingredients-qtunit {
    display: block; 
}

.highlight-quantity span , .highlight-quantity input , .recette_ingredients-details span  {
    font-weight: 300;
    font-style: normal; 
    letter-spacing: 0.03em;
}


.highlight-quantity span {
    line-height: none;
}

.quantite-control__value_number {
    font-weight: 400;
    font-size: 18px;
    font-family: 'Source Sans Pro', sans-serif;
    color: #1B1B1B;
    font-style: normal;

}

.highlight {
    background-color: #F6E2DF; /* ou une autre couleur de votre choix */
    transition: background-color 0.3s ease;
}

.recette_ingredients-items {
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
    gap: 15px;
    margin: 20px 0px;
}

.card-ingredient {
    overflow: hidden;
    transition: transform 0.3s;
}

.list-view {
    display: block;
}

.list-view .card-ingredient {
    width: 100%;
    height: 90px;
    display: inline-flex;
    align-items: center;
}
.list-view .card-ingredient-image {
    width: 75px;
}
.list-view .recette_ingredients-details {
    display: inline-flex;
    flex-direction: row;
    align-items: unset;
    text-align: unset;
    width: 80%;
}
.list-view .recette_ingredients-qtunit {
    display: unset;
}

.card-ingredient:hover {
    transform: scale(1.05);
}

.card-ingredient-image {
    text-align: center;
    padding: 10px;
    max-width: 100%; /* Assure que l'image ne dépasse pas la largeur de son conteneur */
}

.card-ingredient-image img {
    border: 1px solid #ccc;
    border-radius: 8px;
    max-width: 100%; /* Permet à l'image de s'ajuster à la largeur de son conteneur */
    height: auto; /* Conserve le ratio d'aspect de l'image */
}

.recette_ingredients-details {
    display: flex;                /* Utilise Flexbox pour le layout */
    flex-direction: column;       /* Aligne les enfants en colonne */
    align-items: center;          /* Centre horizontalement le contenu */
    text-align: center;           /* Centre le texte à l'intérieur */
    font-weight: 300;
}




.container__timings-recette {
    display: grid;
    align-items: center;
    border: 2px dotted rgba(63, 55, 53, 0.23);
    /* background-color: #FAFAFA; */
    border-radius: 15px;
    overflow: hidden;
    margin: 0 auto;

}


.sub-timing {
    display: grid;
    justify-content: space-around;
    padding: 0 15px;
    
}

.total-timing {
    width: 100%;
    margin: auto;
    display: flex;
}

.total-timing .timing__label h6 , .total-timing .timing__time h7 {
    color: #CB6863 ;
    font-size: 0.9em;
}





.timing {
    display: flex;
    align-items: center;
    max-width: 100%;
    padding: 10px 0;
    margin: auto;
}

.timing__icon {
    width: 22px;
    margin-right: 13px;
    
}

.timing__info {
    display: flex;
    flex-direction: column;
    text-align: center;
}














.ingredient-preparation span , .ingredient-preparation input {
    font-weight: 300 ;     
    font-style: italic;
    color: #1B1B1B; 
    transition: transform 1.2s ease;
}
.etape:hover .ingredient-preparation span , .etape:hover .ingredient-preparation input {
    font-weight: 300 ;     
    font-style: normal;
    color: #CB6863;
}






/* position bouton portion responsive */

@media (max-width: 500px) {

    .bread-crumbs {
        justify-content: center;
        align-items: center;
    }
    .container__info-recette {
        margin: unset;
    }
    .container__timings-recette {
        grid-template-columns: 1fr;
        width: 300px ;
    }
    .sub-timing{
        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
        width: 250px;
    }
    .total-timing {
        border-top: 2px dotted rgba(63, 55, 53, 0.23);
        display: none;
    }
    .sub-timing .total-timing {
        display: contents;
    }
}


@media (min-width: 501px) and (max-width: 670px) {
    .bread-crumbs {
        justify-content: center;
        align-items: center;
    }
    .container__info-recette {
        margin: unset;
    }
    .container__timings-recette {
        grid-template-columns: 1fr;
        width:450px ;
    }
    .sub-timing{
        grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
    }
    .total-timing {
        border-top: 2px dotted rgba(63, 55, 53, 0.23);
    }
    .sub-timing .total-timing {
        display: none;
    }
}
/* ... */

